common-applications/test-environment/openeuler-pr-message/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx    
  name: pr-message-ingress
  namespace: pr-message
spec:
  tls:
    - hosts:
      - prmessage.test.osinfra.cn
      secretName: pr-message-tls
  rules:
    - host: prmessage.test.osinfra.cn
      http:
        paths:
        - backend:
            serviceName: pr-message
            servicePort: 8080
          path: /
